# StartGeant4

./: .gitignore  CMakeLists.txt  main.cc  proyecto_corregir.md  prueba.txt  run.mac  script.py
include/: DetectorConstruction.hh  EventAction.hh  MyMaterials.hh  PhysicsList.hh  RunAction.hh  SteppingAction.hh  TargetHit.hh  TargetSD.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  MyMaterials.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  TargetHit.cc  TargetSD.cc
